Fix Bug 338645 - Custom autocorrection: Cursor does not jump to end of replaced string

FIXED-IN: 4.14.1
BUG: 338645